// Vitest Snapshot v1

exports[`Affix > Affix baseVue demo works fine 1`] = `
<div
  class="affix-base"
>
  <div>
    
    <button
      class="t-button t-size-m t-button--variant-base t-button--theme-primary"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
        固钉
        
      </span>
    </button>
    
  </div>
</div>
`;

exports[`Affix > Affix containerVue demo works fine 1`] = `
<div
  class="affix-container"
  data-v-43b80f2b=""
>
  <div
    class="affix-container-demo1"
    data-v-43b80f2b=""
  >
    <div
      class="background"
      data-v-43b80f2b=""
    >
      <div
        data-v-43b80f2b=""
      >
        
        <button
          class="t-button t-size-m t-button--variant-base t-button--theme-primary"
          data-v-43b80f2b=""
          type="button"
        >
          <span
            class="t-button__text"
          >
            
            FixedTop top:0
            
          </span>
        </button>
        
      </div>
    </div>
  </div>
</div>
`;
